--- a/cross-compilers/x86-64-pc-linux-gnu-gcc-stage1/PKGBUILD
+++ b/cross-compilers/x86-64-pc-linux-gnu-gcc-stage1/PKGBUILD
@@ -6,44 +6,48 @@
 # Contributor: Tavian Barnes <tavianator@tavianator.com>
 # Maintainer: Stefan Schmidt <thrimbor.github@gmail.com>
 
-_target=riscv64-unknown-linux-gnu
-pkgname="${_target}-gcc"
+_target=x86_64-pc-linux-gnu
+pkgname=${_target}-gcc-stage1
 pkgver=11.2.0
 _majorver=${pkgver:0:1}
 _islver=0.24
-pkgrel=3
-pkgdesc="The GNU Compiler Collection (${_target})"
-arch=(x86_64 powerpc64le powerpc)
+pkgrel=2
+pkgdesc="The GNU Compiler Collection. Stage 1 for toolchain building (${_target})"
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL custom)
 url='http://gcc.gnu.org'
-depends=("${_target}-binutils>=2.38-1" "${_target}-glibc>=2.35-1" libmpc elfutils zlib)
-checkdepends=(dejagnu inetutils)
+depends=(${_target}-binutils libmpc zlib)
 options=(!emptydirs !distcc !strip)
-conflicts=("${_target}-gcc-stage1" "${_target}-gcc-stage2")
-replaces=("${_target}-gcc-stage1" "${_target}-gcc-stage2")
-provides=("${_target}-gcc-stage1=${pkgver}" "${_target}-gcc-stage2=${pkgver}")
 source=(https://ftp.gnu.org/gnu/gcc/gcc-${pkgver}/gcc-${pkgver}.tar.xz{,.sig}
-        http://isl.gforge.inria.fr/isl-${_islver}.tar.bz2)
+        http://isl.gforge.inria.fr/isl-${_islver}.tar.bz2
+	gcc11-Wno-format-security.patch)
 validpgpkeys=(F3691687D867B81B51CE07D9BBE43771487328A9  # bpiotrowski@archlinux.org
               86CFFCA918CF3AF47147588051E8B148A9999C34  # evangelos@foutrelis.com
               13975A70E63C361C73AE69EF6EEB81F8981C74C7  # richard.guenther@gmail.com
               D3A93CAD751C2AF4F8C7AD516C35B99309B5FA62) # Jakub Jelinek <jakub@redhat.com>
 sha256sums=('d08edc536b54c372a1010ff6619dd274c0f1603aa49212ba20f7aa2cda36fa8b'
             'SKIP'
-            'fcf78dd9656c10eb8cf9fbd5f59a0b6b01386205fe1934b3b287a0a1898145c0')
+            'fcf78dd9656c10eb8cf9fbd5f59a0b6b01386205fe1934b3b287a0a1898145c0'
+            '504e4b5a08eb25b6c35f19fdbe0c743ae4e9015d0af4759e74150006c283585e')
 
 prepare() {
   [[ ! -d gcc ]] && ln -s gcc-${pkgver/+/-} gcc
   cd gcc
 
   # link isl for in-tree build
-  ln -s ../isl-${_islver} isl
+  ln -sf ../isl-${_islver} isl
 
   # Do not run fixincludes
   sed -i 's@\./fixinc\.sh@-c true@' gcc/Makefile.in
 
+  # Arch Linux installs x86_64 libraries /lib
+  sed -i '/m64=/s/lib64/lib/' gcc/config/i386/t-linux64
+
   # hack! - some configure tests for header files using "$CPP $CPPFLAGS"
   sed -i "/ac_cpp=/s/\$CPPFLAGS/\$CPPFLAGS -O2/" {libiberty,gcc}/configure
+
+  # configure.ac: When adding -Wno-format, also add -Wno-format-security
+  patch -Np0 < "$srcdir/gcc11-Wno-format-security.patch"
 
   mkdir -p "$srcdir/gcc-build"
 }
@@ -65,11 +69,13 @@ build() {
       --with-build-sysroot=/usr/${_target} \
       --with-as=/usr/bin/${_target}-as \
       --with-ld=/usr/bin/${_target}-ld \
-      --libdir=/usr/lib --libexecdir=/usr/lib \
+      --libdir=/usr/lib \
+      --libexecdir=/usr/lib \
       --disable-nls \
+      --with-newlib \
       --enable-languages=c,c++ \
-      --enable-shared \
-      --enable-threads=posix \
+      --disable-shared \
+      --disable-threads \
       --with-system-zlib \
       --with-isl \
       --enable-__cxa_atexit \
@@ -79,8 +85,8 @@ build() {
       --disable-libssp \
       --enable-gnu-unique-object \
       --enable-linker-build-id \
-      --enable-lto \
-      --enable-plugin \
+      --disable-lto \
+      --disable-plugin \
       --enable-install-libiberty \
       --with-linker-hash-style=gnu \
       --enable-gnu-indirect-function \
@@ -93,14 +99,13 @@ build() {
       --host=${CHOST} \
       --build=${CHOST}
 
-  make STAGE1_CFLAGS="-O2 -mcpu=power8" STAGE2_CFLAGS="-O2 -mcpu=power8"
+  make STAGE1_CFLAGS="-O2" all-gcc all-target-libgcc
 }
 
 package() {
   cd gcc-build
 
-  make DESTDIR="$pkgdir" install-gcc install-target-libgcc \
-    install-target-libstdc++-v3
+  make DESTDIR="$pkgdir" install-gcc install-target-libgcc
 
   rm -rf "$pkgdir/usr/share"
 
