--- a/python/flake8/PKGBUILD
+++ b/python/flake8/PKGBUILD
@@ -6,10 +6,10 @@
 
 pkgname=flake8
 pkgver=4.0.1
-pkgrel=4
+pkgrel=5
 epoch=1
 pkgdesc="The modular source code checker: pep8, pyflakes and co"
-arch=('any')
+arch=(any)
 url="https://flake8.pycqa.org"
 license=('MIT')
 depends=('python-pyflakes' 'python-mccabe' 'python-pycodestyle' 'python-entrypoints')
