* update python-flask to 2.1.1-1

--- a/python/python-flask/PKGBUILD
+++ b/python/python-flask/PKGBUILD
@@ -5,31 +5,35 @@
 # Contributor: Tarmo Heiskanen <turskii@gmail.com>
 
 pkgname=python-flask
-pkgver=2.0.3
+pkgver=2.1.1
 pkgrel=1
 pkgdesc='Micro webdevelopment framework for Python'
 url='http://flask.pocoo.org/'
-arch=('any')
+arch=(any)
 license=('custom:BSD')
 depends=('python-werkzeug' 'python-jinja' 'python-itsdangerous' 'python-click')
-makedepends=('python-setuptools'  'python-werkzeug' 'python-jinja' 'python-itsdangerous' 'python-click')
+makedepends=('python-build' 'python-installer' 'python-wheel')
+checkdepends=('python-pytest')
+optdepends=(
+  'python-asgiref: async functions and views'
+  'python-dotenv: loading env vars from files'
+)
 source=("$pkgname-$pkgver.tar.gz::https://github.com/pallets/flask/archive/${pkgver}.tar.gz")
-sha512sums=('1cad5a5753255120a2134546f0f1da4cbe9cfa35c4b98a80c154f7e043309ed1a7af6ab64e0acc9c82568621f481cd1104d56d0623a89a847d7cc1a178e8b77c')
+sha512sums=('b761ce2f8f0562241f97be1172a87576aec8a7dbe8384945ccc35f2b03773f774c86d568a6cf35f7641f264db407fe0c9cd743adc8c879005a6d4b6a098a0b17')
 
 build() {
   cd "flask-$pkgver"
-  python setup.py build
+  python -m build --wheel --no-isolation
 }
 
 check() {
   cd "flask-$pkgver"
-  python setup.py test
+  PYTHONPATH="build/lib" pytest
 }
 
 package() {
   cd "flask-$pkgver"
-
-  python setup.py install --prefix=/usr --root="$pkgdir" --optimize=1
+  python -m installer --destdir="$pkgdir" dist/*.whl
   install -Dm644 LICENSE.rst "$pkgdir/usr/share/licenses/$pkgname/LICENSE.rst"
 }
 
