--- a/python/python-google-api-python-client/PKGBUILD
+++ b/python/python-google-api-python-client/PKGBUILD
@@ -4,17 +4,17 @@
 # Contributor: shadyabhi <abhijeet.1989@gmail.com>
 
 pkgname=python-google-api-python-client
-pkgver=2.37.0
+pkgver=2.44.0
 pkgrel=1
 pkgdesc="Google API Client Library for Python"
-arch=('any')
+arch=(any)
 url="https://github.com/google/google-api-python-client"
 license=('Apache')
 depends=('python-google-auth-httplib2' 'python-uritemplate' 'python-google-api-core')
 optdepends=('python-oauth2client: optional backend')
 makedepends=('python-setuptools')
 source=("google-api-python-client-${pkgver}.tar.gz::https://github.com/google/google-api-python-client/archive/v${pkgver}.tar.gz")
-sha256sums=('6162e68dfcbe72dc4671e3e730fb6a511b756b49431ed3d5a6bf4d8ae93592c9')
+sha256sums=('56cca24cb8a79bd5ecfc28e94bf1c28521f17f69f73c5563c9483da44438aecf')
 
 build() {
   cd "google-api-python-client-${pkgver}"
