--- a/python/python-google-api-core/PKGBUILD
+++ b/python/python-google-api-core/PKGBUILD
@@ -4,16 +4,17 @@
 # Contributor: Kaizhao Zhang <zhangkaizhao@gmail.com>
 
 pkgname=python-google-api-core
-pkgver=2.5.0
+pkgver=2.7.2
 pkgrel=1
 pkgdesc="Google API client core library"
-arch=('any')
+arch=(any)
 url="https://github.com/googleapis/googleapis"
 license=('Apache')
-depends=('python-setuptools' 'python-pytz' 'python-requests' 'python-googleapis-common-protos' 'python-google-auth')
+depends=('python-pytz' 'python-requests' 'python-googleapis-common-protos' 'python-google-auth')
+makedepends=('python-setuptools')
 optdepends=('python-grpcio: for grpc support')
 source=("https://files.pythonhosted.org/packages/source/g/google-api-core/google-api-core-${pkgver}.tar.gz")
-sha256sums=('f33863a6709651703b8b18b67093514838c79f2b04d02aa501203079f24b8018')
+sha256sums=('65480309a7437f739e4476da037af02a3ec8263f1d1f89f72bbdc8f54fe402d2')
 
 build() {
   cd "google-api-core-${pkgver}"
