* update python-importlib_resources to 5.7.1-1

--- a/python/python-importlib_resources/PKGBUILD
+++ b/python/python-importlib_resources/PKGBUILD
@@ -3,36 +3,31 @@
 
 _name=importlib_resources
 pkgname=python-importlib_resources
-pkgver=5.4.0
-pkgrel=3
+pkgver=5.7.1
+pkgrel=1
 pkgdesc="Design and implementation for a planned importlib.resources"
-arch=('any')
+arch=(any)
 url="https://github.com/python/importlib_resources"
-license=('Apache')
-depends=('python-zipp')
-makedepends=('python-setuptools-scm' 'python-toml')
-checkdepends=('python-pytest' 'python-tests')
-source=("https://files.pythonhosted.org/packages/source/${_name::1}/${_name}/${_name}-${pkgver}.tar.gz")
-sha512sums=('9262c185bdf79fad0a11caabc5c5df836702a74e140a9f60ace857e3f6a60fdb091639b2fb7129b17bad5a46968f43dda7d176fe39af495370dd31f04891fb1b')
-b2sums=('f5be47cb63813aea15f65d251115cf398f695041871fdf6e8885fee11d9a9d7a2fbfd07efd494bd7c91077f99ab871e06d45f49de9f7e501a1691601206bfb55')
-
-prepare() {
-  mv -v "${_name}-${pkgver}" "$pkgname-$pkgver"
-}
+license=(Apache)
+depends=(python-zipp)
+makedepends=(python-build python-installer python-setuptools-scm python-toml python-wheel)
+checkdepends=(python-pytest python-tests)
+source=(https://files.pythonhosted.org/packages/source/${_name::1}/$_name/$_name-$pkgver.tar.gz)
+sha512sums=('8fd89dfcea4112d26418bcfa522de36c2136a50d07470ac8de18f62bb7bb964a459534554802b1455996ae65796018bea806a592746c1d2717f1313608cf4918')
+b2sums=('3e30117ae4f18a9f2151b5435428f3853664ce291d2d4ce9490d1a3043ca5ce2e80cf04d7dcef71ebdaba8bbad17ee61bb47303637a8bee73a2263853b65293b')
 
 build() {
-  cd "$pkgname-$pkgver"
-  python setup.py build
+  cd $_name-$pkgver
+  python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 check() {
-  cd "$pkgname-$pkgver"
-  export PYTHONPATH="build:${PYTHONPATH}"
+  cd $_name-$pkgver
   pytest -v
 }
 
 package() {
-  cd "$pkgname-$pkgver"
-  python setup.py install --optimize=1 --root="${pkgdir}"
-  install -vDm 644 README.rst -t "${pkgdir}/usr/share/doc/${pkgname}"
+  cd $_name-$pkgver
+  python -m installer --destdir="$pkgdir" dist/*.whl
+  install -vDm 644 README.rst -t "$pkgdir/usr/share/doc/$pkgname/"
 }
