--- a/python/python-prometheus_client/PKGBUILD
+++ b/python/python-prometheus_client/PKGBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Johannes Löthberg <johannes@kyriasis.com>
 
 pkgname=python-prometheus_client
-pkgver=0.13.1
+pkgver=0.14.1
 pkgrel=1
 
 pkgdesc="Prometheus instrumentation library for Python applications"
 url="https://github.com/prometheus/client_python"
-arch=('any')
+arch=(any)
 license=('APACHE')
 
 depends=('python')
@@ -16,7 +16,7 @@ checkdepends=('python-twisted' 'python-pytest')
 
 source=(client_python-$pkgver.tar.gz::https://github.com/prometheus/client_python/archive/v${pkgver}.tar.gz)
 
-sha512sums=('8d5263ff00fc4797fa65a446bdab4dc3c717cc091f8cee571fdd2130febc480cc61e73e11145ac2bf9bc0eee132efc92d88a4d4facd61d515234748791a92255')
+sha512sums=('882e7193cb344d154df8a7b7fbdfb5c635363c1aea8bde1ea174a7614bc868fe337399db7a1fb90a94128d7bdfedbc741f5f6c44d514d1ca9ab684c7527e7317')
 
 build() {
   cd client_python-$pkgver
