--- a/python/python-werkzeug/PKGBUILD
+++ b/python/python-werkzeug/PKGBUILD
@@ -6,34 +6,39 @@
 # Contributor: Richard Murri
 
 pkgname=python-werkzeug
-pkgver=2.0.3
+pkgver=2.1.1
 pkgrel=1
 pkgdesc='Swiss Army knife of Python web development'
-url='http://werkzeug.pocoo.org/'
-arch=('any')
+url='https://werkzeug.palletsprojects.com/'
+arch=(any)
 license=('custom:BSD')
 depends=('python')
-makedepends=('python-setuptools')
-checkdepends=('python-pytest-timeout' 'python-requests' 'python-pytest-xprocess')
-source=("$pkgname-$pkgver.tar.gz::https://github.com/pallets/werkzeug/archive/${pkgver}.tar.gz")
-sha512sums=('a205cd981b3e1b481436e483190427ff3808a5ea80abc616ca08d899d0e6a39893a5cb60adc65c99dcab3af47c24b321c71996d719cb7f224de7942b44b1fd69')
+makedepends=('python-setuptools' 'python-build' 'python-installer' 'python-wheel')
+checkdepends=('python-pytest' 'python-pytest-timeout' 'python-pytest-xprocess' 'python-requests'
+              'python-ephemeral-port-reserve' 'python-greenlet' 'python-watchdog'
+              'python-cryptography')
+source=("https://github.com/pallets/werkzeug/archive/${pkgver}/$pkgname-$pkgver.tar.gz")
+sha512sums=('992b5b0a95db5266d025e06683b04f932def72c3967b2c9903f718c5f2672cf0abadb247cf77029d99b567c9588f5ae03b6b07d566bfd764c738ede53501ba1b')
 
 build() {
   cd "werkzeug-$pkgver"
 
-  python setup.py build
+  python -m build --wheel --no-isolation
 }
 
-# check() {
-#   cd "werkzeug-$pkgver"
-#   PYTHONPATH="$PWD/build/lib" pytest
-# }
+check() {
+  cd "werkzeug-$pkgver"
+  PYTHONPATH="build/lib" pytest \
+    --deselect=tests/test_serving.py \
+    --deselect=tests/test_debug.py::test_basic \
+    --deselect=tests/middleware/test_http_proxy.py
+}
 
 package() {
   cd "werkzeug-$pkgver"
 
-  python setup.py install --root="$pkgdir" --optimize=1
-  install -Dm644 LICENSE.rst "$pkgdir/usr/share/licenses/$pkgname/LICENSE.rst"
+  python -m installer --destdir="$pkgdir" dist/*.whl
+  install -Dm 644 LICENSE.rst -t "$pkgdir/usr/share/licenses/$pkgname"
 }
 
 # vim:set ts=2 sw=2 et:
