--- a/python/sip/PKGBUILD
+++ b/python/sip/PKGBUILD
@@ -2,17 +2,15 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=sip
-pkgver=6.5.1
-pkgrel=1
+pkgver=6.6.1
+pkgrel=2
 arch=(x86_64 powerpc64le powerpc riscv64)
 pkgdesc='A tool that makes it easy to create Python bindings for C and C++ libraries'
 url='https://www.riverbankcomputing.com/software/sip/intro'
 license=('custom:"sip"')
-depends=(python-toml python-packaging python-setuptools)
-conflicts=(sip5)
-replaces=(sip5)
+depends=(python-toml python-packaging python-setuptools python-ply)
 source=(https://pypi.python.org/packages/source/s/sip/$pkgname-$pkgver.tar.gz)
-sha256sums=('204f0240db8999a749d638a987b351861843e69239b811ec3d1881412c3706a6')
+sha256sums=('696c575c72144122701171f2cc767fe6cc87050ea755a04909152a8508ae10c3')
 options=(debug)
 
 build() {
