* add various missing patches

--- a/binutils/PKGBUILD
+++ b/binutils/PKGBUILD
@@ -8,9 +8,10 @@
 
 pkgname=binutils
 pkgver=2.38
-pkgrel=3.3
+pkgrel=3.6
 pkgdesc='A set of programs to assemble and manipulate binary and object files'
 arch=(x86_64 powerpc64le powerpc riscv64)
+arch=(riscv64)
 url='https://www.gnu.org/software/binutils/'
 license=('GPL3' 'GPL' 'FDL1.3' 'custom:FSFAP')
 groups=(base-devel)
@@ -118,6 +119,10 @@ package() {
   cd binutils-build
   make prefix="$pkgdir/usr" tooldir="$pkgdir/usr" install
 
+  for _bin in bin addr2line ar as c++filt elfedit gprof ld ld.bfd nm objcopy objdump ranlib readelf size strings strip; do
+    ln -s ${_bin} ${pkgdir}/usr/bin/${CHOST}-${_bin}
+  done
+
   # install PIC version of libiberty
   install -m644 libiberty/pic/libiberty.a "$pkgdir/usr/lib"
 
@@ -131,4 +136,6 @@ package() {
 
   # install FSF All Permissive License
   install -Dm644 -t "${pkgdir}"/usr/share/licenses/${pkgname}/ FSFAP
+
+
 }
