--- a/cdrtools/PKGBUILD
+++ b/cdrtools/PKGBUILD
@@ -13,7 +13,7 @@ makedepends=('imake')
 conflicts=('cdrkit')
 provides=('cdrkit')
 replaces=('cdrkit')
-options=(!makeflags)
+options=(!distcc !makeflags !ccache)
 backup=('etc/default/cdrecord' 'etc/default/rscsi')
 source=(https://downloads.sourceforge.net/cdrtools/cdrtools-$pkgver.tar.bz2)
 sha256sums=('aa28438f458ef3f314b79f2029db27679dae1d5ffe1569b6de57742511915e81')
@@ -26,11 +26,16 @@ build() {
   # install rscsi to /usr/bin instead of /usr/sbin
   sed -i 's|INSDIR=.*|INSDIR=bin|' rscsi/Makefile
 
-  [ "${CARCH}" = 'riscv64' ] && \
-    ln -s RULES/i586-linux-cc.rul RULES/riscv64-linux-cc.rul
+  case "${CARCH}" in
+    riscv64)
+      ln -s RULES/i586-linux-cc.rul RULES/riscv-linux-cc.rul
+      ln -s RULES/i586-linux-cc.rul RULES/riscv64-linux-cc.rul
+      export CC=gcc
+    ;;
+  esac
 
   export GMAKE_NOWARN=true
-  make INS_BASE=/usr INS_RBASE=/ VERSION_OS="_ArchPOWER" LDOPTX="$LDFLAGS"
+  make INS_BASE=/usr INS_RBASE=/ VERSION_OS="_ArchPOWER" CCOPTX="${CFLAGS}" LDOPTX="$LDFLAGS"
 }
 
 check() {
