--- a/editorconfig-core-c/PKGBUILD
+++ b/editorconfig-core-c/PKGBUILD
@@ -6,9 +6,9 @@
 
 pkgname=editorconfig-core-c
 pkgver=0.12.5
-pkgrel=1
+pkgrel=1.1
 pkgdesc='EditorConfig core code written in C (for use by plugins supporting EditorConfig parsing)'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://github.com/editorconfig/editorconfig-core-c'
 license=(BSD)
 depends=(pcre2)
@@ -18,7 +18,8 @@ sha256sums=('b2b212e52e7ea6245e21eaf818ee458ba1c16117811a41e4998f3f2a1df298d2')
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
-      -DCMAKE_INSTALL_PREFIX=/usr
+      -DCMAKE_INSTALL_PREFIX=/usr \
+      -DCMAKE_C_FLAGS="$CFLAGS -ffat-lto-objects"
   cmake --build build
 }
 
