--- a/glib2/PKGBUILD
+++ b/glib2/PKGBUILD
@@ -4,15 +4,15 @@
 
 pkgbase=glib2
 pkgname=(glib2 glib2-docs)
-pkgver=2.72.0
-pkgrel=1.1
+pkgver=2.72.1
+pkgrel=1
 pkgdesc="Low level core library"
 url="https://wiki.gnome.org/Projects/GLib"
 license=(LGPL)
 arch=(x86_64 powerpc64le powerpc riscv64)
 depends=(pcre libffi util-linux-libs zlib libsysprof-capture)
 makedepends=(gettext gtk-doc shared-mime-info python libelf git util-linux
-             meson )
+             meson dbus)
 checkdepends=(desktop-file-utils)
 options=(debug)
 source=("git+https://gitlab.gnome.org/GNOME/glib.git?signed#tag=$pkgver"
