--- a/grub/PKGBUILD
+++ b/grub/PKGBUILD
@@ -87,7 +87,8 @@ source=("git+https://git.savannah.gnu.org/git/grub.git#tag=${_tag}?signed"
         '0001-00_header-add-GRUB_COLOR_-variables.patch'
         '0002-10_linux-detect-archlinux-initramfs.patch'
         'grub.default'
-	'sbat.csv')
+	'sbat.csv'
+        'default.cfg')
 sha256sums=('SKIP'
             'SKIP'
             '391d194f6307fcd0915daafd360509a734e26f3e4013e63d47deb2530d59e66e'
@@ -316,6 +317,8 @@ _package_grub-efi() {
 	rm -f "${pkgdir}/usr/lib/grub/${_EFI_ARCH}-efi"/{kernel.exec,gdb_grub,gmodule.pl} || true
 
 	sed -e "s/%PKGVER%/${pkgver}/" < "${srcdir}/sbat.csv" > "${pkgdir}/usr/share/grub/sbat.csv"
+
+	install -m644 "${srcdir}/default.cfg" "${pkgdir}/usr/share/grub/default.cfg"
 }
 
 _package_grub-emu() {
