--- a/kde/ark/PKGBUILD
+++ b/kde/ark/PKGBUILD
@@ -4,10 +4,10 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=ark
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Archiving Tool'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://apps.kde.org/ark/'
 license=(GPL)
 depends=(kparts kpty libarchive libzip kitemmodels hicolor-icon-theme)
@@ -16,11 +16,12 @@ optdepends=('p7zip: 7Z format support' 'unrar: RAR decompression support' 'unarc
             'lzop: LZO format support' 'lrzip: LRZ format support')
 groups=(kde-applications kde-utilities)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('a07654af5a3d7714a485027765ea29a94f62b3aef670cb78532a1561afb978d6'
+sha256sums=('4817458000a8f0c241cc59aed1c52ae4338c9d3c5f4f65a57080abb1ec5b60dc'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() { 
   cmake -B build -S $pkgname-$pkgver \
