--- a/networkmanager/PKGBUILD
+++ b/networkmanager/PKGBUILD
@@ -8,7 +8,7 @@
 
 pkgbase=networkmanager
 pkgname=(networkmanager libnm nm-cloud-setup)
-pkgver=1.36.2
+pkgver=1.36.4
 pkgrel=1
 pkgdesc="Network connection manager and user applications"
 url="https://networkmanager.dev/"
@@ -21,7 +21,8 @@ makedepends=(intltool dhclient dhcpcd iptables-nft gobject-introspection gtk-doc
              python-gobject git vala jansson bluez-libs glib2-docs iwd dnsmasq
              openresolv libpsl audit meson)
 checkdepends=(libx11 python-dbus)
-_commit=ae06ec5207cec126ca767020238c32598b8bfc5d  # tags/1.36.2^0
+options=(debug)
+_commit=4e8e5bdfc2ab6b51b9f8626512089a1f0c94cce6  # tags/1.36.4^0
 source=("git+https://gitlab.freedesktop.org/NetworkManager/NetworkManager.git#commit=$_commit")
 b2sums=('SKIP')
 
@@ -68,6 +69,13 @@ build() {
     -D more_logging=false
     -D qt=false
   )
+
+  # drastically reduce build-time on slow systems
+  if [ check_option check n ]; then
+    echo ":: Checks disabled"
+    meson_options+=(-D tests=no)
+    exit 1
+  fi
 
   arch-meson NetworkManager build "${meson_options[@]}"
   meson compile -C build
