--- a/qemu/PKGBUILD
+++ b/qemu/PKGBUILD
@@ -14,8 +14,8 @@ pkgname=(
 )
 [ "${CARCH}" != 'powerpc' ] && pkgname+=(qemu-block-rbd)
 pkgdesc="A generic and open source machine emulator and virtualizer"
-pkgver=6.2.0
-pkgrel=4
+pkgver=7.0.0
+pkgrel=1
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL2 LGPL2.1)
 url="https://wiki.qemu.org/"
@@ -83,12 +83,10 @@ makedepends_powerpc64le=(ceph)
 makedepends_x86_64=(ceph)
 options=(debug)
 source=(https://download.qemu.org/qemu-$pkgver.tar.xz{,.sig}
-        virtiofsd-glibc235.patch::https://github.com/qemu/qemu/commit/7b223e38603de3a75602e14914d26f9d4baf52eb.patch
         qemu-guest-agent.service
         65-kvm.rules)
 sha512sums=('e9f8231c9e1cfcc41cb47f10a55d63f6b8aee307af00cf6acf64acb7aa4f49fa7e9d6330703a2abea15d8b7bbaba7d3cb08c83edd98d82642367b527df730817'
             'SKIP'
-            '3b8b1e346d02516195c8ba4a1e88a2f0d69639b75cdd5e57185db624ba514f49b6d373a7fb2ec77133fb75cd43a11ce0e96b7a948ec9fc7140ae7ef26c203cb6'
             '269c0f0bacbd06a3d817fde02dce26c99d9f55c9e3b74bb710bd7e5cdde7a66b904d2eb794c8a605bf9305e4e3dee261a6e7d4ec9d9134144754914039f176e4'
             'bdf05f99407491e27a03aaf845b7cc8acfa2e0e59968236f10ffc905e5e3d5e8569df496fd71c887da2b5b8d1902494520c7da2d3a8258f7fd93a881dd610c99')
 validpgpkeys=('CEACC9E15534EBABB82D3FA03353C9CEF108B584') # Michael Roth <flukshun@gmail.com>
@@ -104,9 +102,6 @@ esac
 prepare() {
   mkdir build-{full,headless}
   mkdir -p extra-arch-{full,headless}/usr/{bin,share/qemu}
-
-  cd ${pkgname}-${pkgver}
-  patch -p1 < ../virtiofsd-glibc235.patch # FS#73856
 }
 
 build() {
@@ -138,7 +133,6 @@ _build() (
     --enable-modules \
     --enable-sdl \
     --enable-slirp=system \
-    --enable-xfsctl \
     "${@:2}"
 
   ninja
@@ -440,3 +434,7 @@ package_qemu-guest-agent() {
 }
 
 # vim:set ts=2 sw=2 et:
+sha512sums=('44ecd10c018a3763e1bc87d1d35b98890d0d5636acd69fe9b5cadf5024d5af6a31684d60cbe1c3370e02986434c1fb0ad99224e0e6f6fe7eda169992508157b1'
+            'SKIP'
+            '269c0f0bacbd06a3d817fde02dce26c99d9f55c9e3b74bb710bd7e5cdde7a66b904d2eb794c8a605bf9305e4e3dee261a6e7d4ec9d9134144754914039f176e4'
+            'bdf05f99407491e27a03aaf845b7cc8acfa2e0e59968236f10ffc905e5e3d5e8569df496fd71c887da2b5b8d1902494520c7da2d3a8258f7fd93a881dd610c99')
