--- a/riscv64/linux-visionfive/PKGBUILD
+++ b/riscv64/linux-visionfive/PKGBUILD
@@ -1,9 +1,10 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 pkgbase=linux-visionfive
-pkgver=5.17.0.rc8
+pkgver=5.17
 pkgrel=1
+epoch=1
 pkgdesc='Linux kernel for the StarFive VisionFive V1'
-_commit="ab93b1bae004d1d7f4c795e15ea6ed6478d2789c"
+_commit="243ce759ed5821edf38bf93ce7325e232b805547"
 url="https://git.archlinux.org/linux.git/log/?h=$_srctag"
 arch=(any)
 license=(GPL2)
@@ -23,14 +24,13 @@ validpgpkeys=(
   'C7E7849466FE2358343588377258734B41C31549'  # David Runge <dvzrv@archlinux.org>
 )
 sha256sums=('SKIP'
-            '48b0e9c91d475073d6884a2390ecf7dcdb36393e3af79887235fc09fe325b5f5')
+            '011ade0cbc4303fc669aee384a559d3f5d62b13f6dfdb9aa9508fe188fe133c0')
 
 export KBUILD_BUILD_HOST=archpower
 export KBUILD_BUILD_USER=$pkgbase
 export KBUILD_BUILD_TIMESTAMP="$(date -Ru${SOURCE_DATE_EPOCH:+d @$SOURCE_DATE_EPOCH})"
 
 export MYARCH="riscv"
-export CFLAGS="-O2 -pipe"
 
 prepare() {
   cd $pkgbase
