--- a/spice/PKGBUILD
+++ b/spice/PKGBUILD
@@ -6,8 +6,7 @@ pkgname=spice
 pkgver=0.15.0
 pkgrel=1
 pkgdesc="SPICE server"
-arch=(x86_64 powerpc64le powerpc)
-arch=(riscv64)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.spice-space.org"
 license=('LGPL2.1')
 depends=('pixman' 'opus' 'libjpeg-turbo' 'glib2' 'libsasl' 'lz4')
