--- a/gjs/PKGBUILD
+++ b/gjs/PKGBUILD
@@ -3,19 +3,20 @@
 # Contributor: Ionut Biru <ibiru@archlinux.org>
 
 pkgname=gjs
-pkgver=1.70.1
-pkgrel=2
+pkgver=1.72.0
+pkgrel=1
 epoch=2
 pkgdesc="Javascript Bindings for GNOME"
 url="https://wiki.gnome.org/Projects/Gjs"
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL)
-depends=(cairo gobject-introspection-runtime js78 dconf readline
+depends=(cairo gobject-introspection-runtime js91 dconf readline
          libsysprof-capture)
 makedepends=(gobject-introspection git meson dbus)
 checkdepends=(xorg-server-xvfb gtk3 gtk4)
 provides=(libgjs.so)
-_commit=f17afbffec385030c1b47dab992f7e08232fea50  # tags/1.70.1^0
+options=(debug)
+_commit=f0341aaa64318752272c4c6a3aef335401f1b3c9  # tags/1.72.0^0
 source=("git+https://gitlab.gnome.org/GNOME/gjs.git#commit=$_commit")
 sha256sums=('SKIP')
 
