--- a/kde/dragon/PKGBUILD
+++ b/kde/dragon/PKGBUILD
@@ -4,21 +4,22 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=dragon
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='A multimedia player where the focus is on simplicity, instead of features'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://apps.kde.org/dragonplayer/'
 license=(GPL)
 depends=(hicolor-icon-theme kparts phonon-qt5)
 makedepends=(extra-cmake-modules kdoctools)
 groups=(kde-applications kde-multimedia)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('3f94ceaf4560b1d5fdf58c2a10daf6a4d94924470f08fd2df1387f65ea0d3f13'
+sha256sums=('e1bae79adf88ae980a41ff475260c4d6e9f0b04b1f88df44d2bd4ab217e53c26'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() { 
   cmake -B build -S $pkgname-$pkgver \
