--- a/libe-book/PKGBUILD
+++ b/libe-book/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgname=libe-book
 pkgver=0.1.3
-pkgrel=10
+pkgrel=11
 pkgdesc="Library for import of reflowable e-book formats."
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://sourceforge.net/projects/libebook/"
 license=('LGPL2.1' 'MPL')
 depends=('librevenge' 'libxml2' 'liblangtag')
