--- a/libreoffice-fresh/PKGBUILD
+++ b/libreoffice-fresh/PKGBUILD
@@ -11,10 +11,10 @@ _google_default_client_secret=0ZChLK6AxeA3Isu96MkwqDR4
 
 pkgbase=libreoffice-fresh
 pkgname=('libreoffice-fresh-sdk' 'libreoffice-fresh')
-_LOver=7.2.5.2
-pkgver=7.2.5
-pkgrel=4
-arch=(x86_64 powerpc64le)
+_LOver=7.3.2.2
+pkgver=7.3.2
+pkgrel=2
+arch=(x86_64 powerpc64le powerpc)
 license=('LGPL3')
 url="https://www.libreoffice.org/"
 makedepends=('curl>=7.20.0' 'hunspell>=1.2.8' 'python>=3.7' 'libwpd>=0.9.2' 'libwps'
@@ -33,6 +33,7 @@ makedepends=('curl>=7.20.0' 'hunspell>=1.2.8' 'python>=3.7' 'libwpd>=0.9.2' 'lib
 	'libexttextcat' 'gobject-introspection' # 'libfbclient'
 	'libtommath' 'libzmf' 'gpgme' 'xmlsec' 'rxvt-unicode' 
 	'libepubgen' 'libfreehand' 'libqxp' 'libstaroffice'  'boost' 'libnumbertext'
+	'libcuckoo' 'abseil-cpp' 'zxing-cpp' 'clang'
 	'libffi' 'box2d' 'git'
 )
 options=('!lto') # using --enable-lto (for parallel link-time optimization)
@@ -49,17 +50,17 @@ source=(${_mirror}/libreoffice{,-help,-translations}-${_LOver}.tar.xz{,.asc}
 	${_additional_source_url}/17410483b5b5f267aa18b7e00b65e6e0-hsqldb_1_8_0.zip
 	${_additional_source_url}/d8bd5eed178db6e2b18eeed243f85aa8-flute-1.1.6.zip
 	${_additional_source_url}/ba2930200c9f019c2d93a8c88c651a0f-flow-engine-0.9.4.zip
-	${_additional_source_url}/pdfium-4500.tar.bz2
+	${_additional_source_url}/pdfium-4699.tar.bz2
 	${_additional_source_url}/dtoa-20180411.tgz
 	${_additional_source_url}/lxml-4.1.1.tgz
 	${_additional_source_url}/Firebird-3.0.7.33374-0.tar.bz2
-	${_additional_source_url}/zxing-cpp-1.1.1.tar.gz
-	${_additional_source_url}/skia-m90-45c57e116ee0ce214bdf78405a4762722e4507d9.tar.xz
+	${_additional_source_url}/skia-m97-a7230803d64ae9d44f4e1282444801119a3ae967.tar.xz
 	${_additional_source_url}/libcmis-0.5.2.tar.xz
 	${_additional_source_url2}/8249374c274932a21846fa7629c2aa9b-officeotron-0.7.4-master.jar  # for test suite
 	${_additional_source_url2}/odfvalidator-1.2.0-incubating-SNAPSHOT-jar-with-dependencies-971c54fd38a968f5860014b44301872706f9e540.jar # for test suite
 	${_additional_source_url2}/f543e6e2d7275557a839a164941c0a86e5f2c3f2a0042bfc434c88c6dde9e140-opens___.ttf
 	${_additional_source_url2}/185d60944ea767075d27247c3162b3bc-unowinreg.dll
+	poppler-22.03.0.patch
 	make-pyuno-work-with-system-wide-module-install.diff
 	soffice-template.desktop.in 
 	libreoffice-fresh.sh libreoffice-fresh.csh)
@@ -71,12 +72,11 @@ noextract=(35c94d2df8893241173de1d16b6034c0-swingExSrc.zip
            17410483b5b5f267aa18b7e00b65e6e0-hsqldb_1_8_0.zip
            d8bd5eed178db6e2b18eeed243f85aa8-flute-1.1.6.zip
            ba2930200c9f019c2d93a8c88c651a0f-flow-engine-0.9.4.zip
-           pdfium-4500.tar.bz2
+           pdfium-4699.tar.bz2
            dtoa-20180411.tgz
            lxml-4.1.1.tgz
            Firebird-3.0.7.33374-0.tar.bz2
-           zxing-cpp-1.1.1.tar.gz
-           skia-m90-45c57e116ee0ce214bdf78405a4762722e4507d9.tar.xz
+           skia-m97-a7230803d64ae9d44f4e1282444801119a3ae967.tar.xz
            libcmis-0.5.2.tar.xz
            8249374c274932a21846fa7629c2aa9b-officeotron-0.7.4-master.jar  # for test suite
            odfvalidator-1.2.0-incubating-SNAPSHOT-jar-with-dependencies-971c54fd38a968f5860014b44301872706f9e540.jar  # for test suite
@@ -84,11 +84,11 @@ noextract=(35c94d2df8893241173de1d16b6034c0-swingExSrc.zip
            185d60944ea767075d27247c3162b3bc-unowinreg.dll
 )
 validpgpkeys=('C2839ECAD9408FBE9531C3E9F434A1EFAFEEAEA3') # LibreOffice Build Team (CODE SIGNING KEY) <build@documentfoundation.org>
-sha256sums=('67c1bfb059d433286b0252a915627b33af63bb5f4b6ec9509d13b9dd475512a7'
+sha256sums=('be96b0c9c7af7e24564729281ca6cef4eadfb06c9b30131a6fc94fa3e43b46a8'
             'SKIP'
-            'eaf1112d68747e441c491902dfb7f0d8706ac55b5bafd90f1213b25978ccadf3'
+            'addb19304e3330f49614eb979541cf1bdf93b481dcce22fdee20fbb193066aec'
             'SKIP'
-            'f6b9ee4627ec117ed101476c5fa555c3fc504ba759792dd16ca9e80b7f6e31df'
+            'c2588507b425bc7047b6325fcde8a2fcc9a927cee5b76065f42ddb68bad0fd71'
             'SKIP'
             '64585ac36a81291a58269ec5347e7e3e2e8596dbacb9221015c208191333c6e1'
             '1fb458d6aab06932693cc8a9b6e4e70944ee1ff052fa63606e3131df34e21753'
@@ -98,17 +98,17 @@ sha256sums=('67c1bfb059d433286b0252a915627b33af63bb5f4b6ec9509d13b9dd475512a7'
             'd30b13f4ba2e3b6a2d4f020c0dee0a9fb9fc6fbcc2d561f36b78da4bf3802370'
             '1b5b24f7bc543c0362b667692f78db8bab4ed6dafc6172f104d0bd3757d8a133'
             '233f66e8d25c5dd971716d4200203a612a407649686ef3b52075d04b4c9df0dd'
-            '26a03dd60e5ed0979cdaba9cc848242895110ddfdf347d40989ce2f14020f304'
+            'ee80fe0a3b20ef5c5babc494cd655d1b1a0bdec710acb04524789df500c563bf'
             '0082d0684f7db6f62361b76c4b7faba19e0c7ce5cb8e36c4b65fea8281e711b4'
             '940caef1ec7c78e0c34b0f6b94fe42d0f2022915ffc78643d28538a5cfd0f40e'
             'acb85cedafa10ce106b1823fb236b1b3e5d942a5741e8f8435cc8ccfec0afe76'
-            'e595b3fa2ec320beb0b28f6af56b1141853257c2611686685639cebb3b248c86'
-            'abe0b94d54edb717c58d74263f4ed3d27824d2ce9e9f2ce85a21ab38d993f94d'
+            '97e859e8467eca9d2441cd23079b61c2c3863b5687620f18cc31a9f966740177'
             'd7b18d9602190e10d437f8a964a32e983afd57e2db316a07d87477a79f5000a2'
             'f2443f27561af52324eee03a1892d9f569adc8db9e7bca55614898bc2a13a770'
             '984f2a479df79e27e7b01a5815ac53ae64e07746b882262d8a64566494515504'
             'f543e6e2d7275557a839a164941c0a86e5f2c3f2a0042bfc434c88c6dde9e140'
             'eafde646a7dbe46d20c291685b0beac2382174d78d66ee990e229a1bf6e6cec6'
+            'e61e2a266c7a4374377475254a2f095c1ce2376980b301955a4e5a0d32d3c25b'
             'c463654a73ecfbc242ff109726fb4faecdbfb3d91affafe919b24bea65afb563'
             'd0be8099cbee3c9dfda694a828149b881c345b204ab68826f317580aafb50879'
             'cd1b25ff390e436c6bffa65c6e12382236e3ccbf8d3aae51b1b59bcaed79fd8a'
@@ -129,6 +129,8 @@ prepare() {
 	# /usr/share/libreoffice/sdk/classes/win/unowinreg.dll -> /build/libreoffice/src/185d60944ea767075d27247c3162b3bc-unowinreg.dll
 	rm "${srcdir}"/ext_sources/185d60944ea767075d27247c3162b3bc-unowinreg.dll
 	cp -f "${srcdir}"/185d60944ea767075d27247c3162b3bc-unowinreg.dll "${srcdir}"/ext_sources
+
+	patch -Np1 -i "${srcdir}"/poppler-22.03.0.patch
 
 	# fix not upstreamable pyuno paths - FS#54250
 	patch -Np1 -i "${srcdir}"/make-pyuno-work-with-system-wide-module-install.diff
@@ -152,7 +154,7 @@ build() {
 	CPPFLAGS+=' -DU_USING_ICU_NAMESPACE=1'
 
 	./autogen.sh --with-extra-buildid="${pkgver}-${pkgrel}" \
-		--with-vendor="Arch Linux" \
+		--with-vendor="Arch POWER" \
 		--enable-split-app-modules \
 		--with-parallelism=${_MAKEFLAGS/-j/} \
 		--with-external-tar="${srcdir}/ext_sources" \
@@ -197,7 +199,7 @@ build() {
 		--with-system-libetonyek \
 		--with-system-libfreehand \
 		--without-system-firebird \
-		--without-system-zxing \
+		--with-system-zxing \
 		--with-system-libtommath \
 		--with-system-libatomic-ops \
 		--with-system-libebook \
@@ -218,6 +220,7 @@ build() {
 		--with-system-libzmf \
 		--with-system-gpgmepp \
 		--with-system-libstaroffice \
+		--with-system-cuckoo \
 		--with-system-serf \
 		--with-jdk-home="/usr/lib/jvm/default" \
 		--with-ant-home="/usr/share/ant"\
@@ -286,6 +289,7 @@ package_libreoffice-fresh() {
 		'liblangtag' 'libexttextcat' 'liborcus' # 'libfbclient'
 		'libtommath' 'libzmf' 'libatomic_ops' 'xmlsec' 'gpgme' 'libnumbertext'
 		'libfreehand' 'libstaroffice' 'libepubgen' 'libqxp' 'libepoxy' 'box2d'
+		'zxing-cpp'
 		'xdg-utils')
 	optdepends=('java-runtime:     adds java support'
 		'java-environment: required by extension-wiki-publisher and extension-nlpsolver'
