--- a/libvirt/PKGBUILD
+++ b/libvirt/PKGBUILD
@@ -1,19 +1,22 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
+# Maintainer: Sven-Hendrik Haase <svenstaro@archlinux.org>
 # Maintainer: Robin Broda <robin@broda.me>
 # Contributor: Christian Rebischke <chris.rebischke@archlinux.org>
 # Contributor: Sergej Pupykin <pupykin.s+arch@gmail.com>
 # Contributor: Jonathan Wiersma <archaur at jonw dot org>
 
 pkgname=(libvirt libvirt-storage-gluster libvirt-storage-iscsi-direct)
-[ "${CARCH}" != 'powerpc' ] && pkgname+=(libvirt-storage-rbd)
+case "${CARCH}" in
+  powerpc64le|x86_64) pkgname+=(libvirt-storage-rbd) ;;
+esac
 epoch=1
-pkgver=8.1.0
-pkgrel=1.1
+pkgver=8.2.0
+pkgrel=4
 pkgdesc="API for controlling virtualization engines (openvz,kvm,qemu,virtualbox,xen,etc)"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://libvirt.org/"
 license=('LGPL' 'GPL3') #libvirt_parthelper links to libparted which is GPL3 only
-depends=('libpciaccess' 'yajl' 'fuse2' 'gnutls' 'parted' 'libssh' 'libxml2' 'numactl' 'polkit')
+depends=('libpciaccess' 'yajl' 'fuse3' 'gnutls' 'parted' 'libssh' 'libxml2' 'numactl' 'polkit')
 makedepends=('meson' 'libxslt' 'python-docutils' 'lvm2' 'open-iscsi' 'libiscsi' 'glusterfs'
              'bash-completion' 'rpcsvc-proto' 'dnsmasq' 'iproute2' 'qemu-headless')
 makedepends_powerpc64le=('ceph-libs')
@@ -28,25 +31,12 @@ optdepends=('libvirt-storage-gluster: Gluster storage backend'
             'ebtables: required for default NAT networking'
             'qemu: QEMU/KVM support'
             'lvm2: Logical Volume Manager support'
-            'open-iscsi: iSCSI support via iscsiadm')
+            'open-iscsi: iSCSI support via iscsiadm'
+            'swtpm: TPM emulator support')
 optdepends_powerpc64le=('libvirt-storage-rbd: RBD storage backend')
 optdepends_x86_64=('libvirt-storage-rbd: RBD storage backend')
+
 backup=(
-  'etc/conf.d/libvirtd'
-  'etc/conf.d/libvirt-guests'
-  'etc/conf.d/virtchd'
-  'etc/conf.d/virtinterfaced'
-  'etc/conf.d/virtlockd'
-  'etc/conf.d/virtlogd'
-  'etc/conf.d/virtlxcd'
-  'etc/conf.d/virtnetworkd'
-  'etc/conf.d/virtnodedevd'
-  'etc/conf.d/virtnwfilterd'
-  'etc/conf.d/virtproxyd'
-  'etc/conf.d/virtqemud'
-  'etc/conf.d/virtsecretd'
-  'etc/conf.d/virtstoraged'
-  'etc/conf.d/virtvboxd'
   'etc/libvirt/libvirt-admin.conf'
   'etc/libvirt/libvirt.conf'
   'etc/libvirt/libvirtd.conf'
@@ -97,8 +87,9 @@ backup=(
   'etc/logrotate.d/libvirtd.qemu'
   'etc/sasl2/libvirt.conf'
 )
+options=(debug)
 source=("https://libvirt.org/sources/$pkgname-$pkgver.tar.xz"{,.asc})
-sha256sums=('3c6c43becffeb34a3f397c616206aa69a893ff8bf5e8208393c84e8e75352934'
+sha256sums=('0ecd9c7dd52db7a2d124155ffa5e11de2fbd05014eceffbd1972b022d21becba'
             'SKIP')
 validpgpkeys=('453B65310595562855471199CA68BE8010084C9C') # Jiří Denemark <jdenemar@redhat.com>
 
@@ -126,8 +117,8 @@ build() {
   arch-meson build \
     --libexecdir=lib/libvirt \
     -Drunstatedir=/run \
-    -Dqemu_user=kvm \
-    -Dqemu_group=kvm \
+    -Dqemu_user=libvirt-qemu \
+    -Dqemu_group=libvirt-qemu \
     -Dnetcf=disabled \
     -Dopenwsman=disabled \
     -Dapparmor=disabled \
@@ -145,7 +136,7 @@ build() {
     -Dstorage_vstorage=disabled \
     -Ddtrace=disabled \
     -Dnumad=disabled \
-    -Dstorage_zfs=enabled ${EXTRA_MESON_FLAGS}
+    -Dstorage_zfs=enabled ${EXTRA_MESON_FLAGS} 
 
   ninja -C build
 }
@@ -162,13 +153,16 @@ package_libvirt() {
   DESTDIR="$pkgdir" ninja -C build install
 
   mkdir "$pkgdir"/usr/lib/{sysusers,tmpfiles}.d
-  echo "g libvirt - -" > "$pkgdir/usr/lib/sysusers.d/libvirt.conf"
-  echo "z /var/lib/libvirt/qemu 0751" > "$pkgdir/usr/lib/tmpfiles.d/libvirt.conf"
+  echo 'g libvirt - -' > "$pkgdir/usr/lib/sysusers.d/libvirt.conf"
+  echo 'u libvirt-qemu /var/lib/libvirt "Libvirt QEMU user"' >> "$pkgdir/usr/lib/sysusers.d/libvirt.conf"
+  echo 'm libvirt-qemu kvm' >> "$pkgdir/usr/lib/sysusers.d/libvirt.conf"
+  echo 'z /var/lib/libvirt/qemu 0751' > "$pkgdir/usr/lib/tmpfiles.d/libvirt.conf"
 
   chown 0:102 "$pkgdir/usr/share/polkit-1/rules.d"
   chmod 0750 "$pkgdir/usr/share/polkit-1/rules.d"
   chmod 600 "$pkgdir"/etc/libvirt/nwfilter/*.xml \
     "$pkgdir/etc/libvirt/qemu/networks/default.xml"
+  chmod 700 "$pkgdir"/etc/libvirt/secrets
 
   rm -rf \
     "$pkgdir/run" \
@@ -180,7 +174,9 @@ package_libvirt() {
 
   # move split modules
   mv "$pkgdir"/usr/lib/libvirt/storage-backend/libvirt_storage_backend_gluster.so "$pkgdir/../"
-  [ "${CARCH}" != 'powerpc' ] && mv "$pkgdir"/usr/lib/libvirt/storage-backend/libvirt_storage_backend_rbd.so "$pkgdir/../"
+  case "${CARCH}" in
+    powerpc64le|x86_64)  mv "$pkgdir"/usr/lib/libvirt/storage-backend/libvirt_storage_backend_rbd.so "$pkgdir/../" ;;
+  esac
   mv "$pkgdir/usr/lib/libvirt/storage-backend/libvirt_storage_backend_iscsi-direct.so" "$pkgdir/../"
   mv "$pkgdir/usr/lib/libvirt/storage-file/libvirt_storage_file_gluster.so" "$pkgdir/../"
 }
