--- a/qca/PKGBUILD
+++ b/qca/PKGBUILD
@@ -6,7 +6,7 @@
 pkgbase=qca
 pkgname=(qca-qt5 qca-qt6)
 pkgver=2.3.4
-pkgrel=1
+pkgrel=3
 pkgdesc='Qt Cryptographic Architecture'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://userbase.kde.org/QCA'
@@ -17,6 +17,7 @@ source=(https://download.kde.org/stable/$pkgbase/$pkgver/$pkgbase-$pkgver.tar.xz
 sha256sums=('6b695881a7e3fd95f73aaee6eaeab96f6ad17e515e9c2b3d4b3272d7862ff5c4'
             'SKIP')
 validpgpkeys=(CB9387521E1EE0127DA804843FDBB55084CC5D84) # Harald Sitter <sitter@kde.org>
+options=(debug)
 
 build() {
   cmake -B build-qt5 -S $pkgbase-$pkgver \
