--- a/rust/PKGBUILD
+++ b/rust/PKGBUILD
@@ -1,52 +1,73 @@
-# POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Johannes Löthberg <johannes@kyriasis.com>
 # Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
 # Contributor: Alexander F Rødseth <xyproto@archlinux.org>
 # Contributor: Daniel Micay <danielmicay@gmail.com>
 # Contributor: userwithuid <userwithuid@gmail.com>
 
-pkgname=('rust' 'rust-docs')
+pkgbase=rust
+pkgname=(rust rust-wasm rust-src)
+[ "${CARCH}" = 'x86_64' ] && pkgname+=(lib32-rust-libs rust-musl)
 epoch=1
-pkgver=1.59.0
+pkgver=1.60.0
 pkgrel=1
-
+pkgdesc="Systems programming language focused on safety, speed and concurrency"
+url=https://www.rust-lang.org/
+arch=(x86_64 powerpc64le powerpc riscv64)
+license=(MIT Apache)
+options=(!emptydirs !strip !lto)
 _llvm_ver=13.0.1
-
-pkgdesc='Systems programming language focused on safety, speed and concurrency'
-url='https://www.rust-lang.org/'
-arch=(powerpc64le powerpc)
-license=('MIT' 'Apache')
-
-makedepends=("llvm=$_llvm_ver" 'libffi' 'perl' 'python'
-             'curl' 'cmake'  'ninja' 'rust')
-makedepends_powerpc64le=('rust')
-makedepends_x86_64=('rust')
-checkdepends=('procps-ng' 'gdb')
-
-options=('!emptydirs' '!strip')
-
+depends=(gcc-libs llvm-libs curl libssh2 gcc)
+makedepends=(rust "llvm=$_llvm_ver" libffi perl python cmake ninja wasi-libc lld)
+makedepends_x86_64=(lib32-gcc-libs musl)
+checkdepends=(procps-ng gdb)
 source=(
   "https://static.rust-lang.org/dist/rustc-$pkgver-src.tar.gz"{,.asc}
   "https://github.com/llvm/llvm-project/releases/download/llvmorg-$_llvm_ver/compiler-rt-$_llvm_ver.src.tar.xz"{,.sig}
-  0001-bootstrap-Change-libexec-dir.patch
   0001-cargo-Change-libexec-dir.patch
+  0001-bootstrap-Change-libexec-dir.patch
   0002-compiler-Change-LLVM-targets.patch
   0003-compiler-Use-wasm-ld-for-wasm-targets.patch
 )
-sha256sums=('a7c8eeaee85bfcef84c96b02b3171d1e6540d15179ff83dddd9eafba185f85f9'
+sha256sums=('20ca826d1cf674daf8e22c4f8c4b9743af07973211c839b85839742314c838b7'
             'SKIP'
             '7b33955031f9a9c5d63077dedb0f99d77e4e7c996266952c1cec55626dca5dfc'
             'SKIP'
-            'a2a8a7c6a5732f79cc92f81d3c8380589c4e2b9a996fb565bbefe42f66b62597'
             '0f8cfbe0387dd62909fe9cb9523223ae1c2319494e2caf5fa4d0592198631b3e'
-            '977da945985dce4484ace8794cbc91241b1f3c27311c1a8b201231db6e1d19e5'
-            'fcf3c4442ba6a9e59415652ce8514428b2e37b80c5fe7d07fb44259ad37abafb')
-validpgpkeys=('108F66205EAEB0AAA8DD5E1C85AB96E6FA1BE5FE'  # Rust Language (Tag and Release Signing Key) <rust-key@rust-lang.org>
-              '474E22316ABF4785A88C6E8EA2C794A986419D8A'  # Tom Stellard <tstellar@redhat.com>
-              'B6C8F98282B944E3B0D5C2530FC3042E345AD05D') # Hans Wennborg <hans@chromium.org>
+            '7a69e38716957ff074c5f932a82bbea1d9a3713a3f39d9085977cdc8df336c43'
+            '2ef851be0562d13431c5c81df0161f92984e79845fe986182225f2dae58a9452'
+            'f8ea25693ba42c7e185aa8677218783fe0cd60a3370926cb6996ec898b43d691')
+validpgpkeys=(108F66205EAEB0AAA8DD5E1C85AB96E6FA1BE5FE  # Rust Language (Tag and Release Signing Key) <rust-key@rust-lang.org>
+              474E22316ABF4785A88C6E8EA2C794A986419D8A  # Tom Stellard <tstellar@redhat.com>
+              B6C8F98282B944E3B0D5C2530FC3042E345AD05D) # Hans Wennborg <hans@chromium.org>
+
+case "${CARCH}" in
+  powerpc64le)
+    _rust_target='powerpc64le-unknown-linux-gnu'
+    _config_targets='"powerpc64le-unknown-linux-gnu","wasm32-unknown-unknown","wasm32-wasi"'
+    _config_target_extras=''
+  ;;
+  powerpc)
+    _rust_target='powerpc-unknown-linux-gnu'
+    _config_targets='"powerpc-unknown-linux-gnu","wasm32-unknown-unknown","wasm32-wasi"'
+    _config_target_extras=''
+  ;;
+  riscv64)
+    _rust_target='riscv64gc-unknown-linux-gnu'
+    _config_targets='"riscv64gc-unknown-linux-gnu","wasm32-unknown-unknown","wasm32-wasi"'
+    _config_target_extras=''
+  ;;
+  x86_64)
+    _rust_target="${CHOST}"
+    _config_targets='"x86_64-unknown-linux-gnu","i686-unknown-linux-gnu","x86_64-unknown-linux-musl","wasm32-unknown-unknown","wasm32-wasi"'
+    _config_target_extras='[target.x86_64-unknown-linux-musl]
+sanitizers = false
+musl-root = "/usr/lib/musl"'
+  ;;
+  *) echo ":: Architecture is unsupported!"; return 1 ;;
+esac
 
 prepare() {
-  cd "rustc-$pkgver-src"
+  cd rustc-$pkgver-src
 
   # Patch bootstrap and cargo so credential helpers
   # are in /usr/lib instead of /usr/libexec
@@ -59,16 +80,6 @@ prepare() {
   # Use our wasm-ld
   patch -Np1 -i ../0003-compiler-Use-wasm-ld-for-wasm-targets.patch
 
-  BOOTSTRAP_PATH="/usr/bin"
-  case "${CARCH}" in
-    powerpc) 
-      BUILD_TOOLS='"cargo", "clippy", "rustfmt", "analysis", "src", "rust-demangler"'
-    ;;
-    *)
-      BUILD_TOOLS='"cargo", "rls", "clippy", "rustfmt", "analysis", "src", "rust-demangler"'
-    ;;
-  esac
-
   cat >config.toml <<END
 changelog-seen = 2
 profile = "user"
@@ -77,108 +88,162 @@ profile = "user"
 link-shared = true
 
 [build]
-target = ["${CHOST}"]
-cargo = "${BOOTSTRAP_PATH}/cargo"
-rustc = "${BOOTSTRAP_PATH}/rustc"
-rustfmt = "${BOOTSTRAP_PATH}/rustfmt"
+target = [
+  ${_config_targets}
+]
+cargo = "/usr/bin/cargo"
+rustc = "/usr/bin/rustc"
+rustfmt = "/usr/bin/rustfmt"
+locked-deps = true
 vendor = true
-tools = [${BUILD_TOOLS}]
+tools = ["cargo", "rls", "clippy", "rustfmt", "analysis", "src", "rust-demangler"]
 sanitizers = true
 profiler = true
+
+# Generating docs fails with the wasm32-* targets
+docs = false
 
 [install]
 prefix = "/usr"
 
 [rust]
+debuginfo-level-std = 2
+channel = "stable"
+description = "Arch POWER $pkgbase $epoch:$pkgver-$pkgrel"
+rpath = false
+backtrace-on-ice = true
+remap-debuginfo = true
+jemalloc = true
+
 # LLVM crashes when passing an object through ThinLTO twice.  This is triggered
 # when using rust code in cross-language LTO if libstd was built using ThinLTO.
 # http://blog.llvm.org/2019/09/closing-gap-cross-language-lto-between.html
 # https://github.com/rust-lang/rust/issues/54872
 codegen-units-std = 1
 
-debuginfo-level-std = 2
-channel = "stable"
-rpath = false
+[dist]
+compression-formats = ["gz"]
 
-[target.${CHOST}]
+[target.${_rust_target}]
 llvm-config = "/usr/bin/llvm-config"
+
+${_config_target_extras}
+
+[target.wasm32-unknown-unknown]
+sanitizers = false
+profiler = false
+
+[target.wasm32-wasi]
+sanitizers = false
+profiler = false
+wasi-root = "/usr/share/wasi-sysroot"
 END
 }
 
+_pick() {
+  local p="$1" f d; shift
+  for f; do
+    d="$srcdir/$p/$f"
+    mkdir -p "$(dirname "$d")"
+    mv "$f" "$d"
+    rmdir -p --ignore-fail-on-non-empty "$(dirname "$f")"
+  done
+}
+
 build() {
-  cd "rustc-$pkgver-src"
+  cd rustc-$pkgver-src
 
   export RUST_BACKTRACE=1
   export RUST_COMPILER_RT_ROOT="$srcdir/compiler-rt-$_llvm_ver.src"
   [[ -d $RUST_COMPILER_RT_ROOT ]]
 
-  DESTDIR="$PWD"/dest-rust python ./x.py install -j "$(nproc)"
+  DESTDIR="$srcdir/dest-rust" python ./x.py install -j "$(nproc)"
 
-  # Remove analysis data for libs that weren't installed
-  # TODO: Find out where these come from
-  local file lib
-  while read -rd '' file; do
-    lib="${file%.json}.rlib"
-    lib="${lib/\/analysis\///lib/}"
-    if [[ ! -e $lib ]]; then
-      echo "missing '$lib'"
-      rm -v "$file"
-    fi
-  done < <(find "dest-rust/usr/lib/rustlib"  -path '*/analysis/*.json' -print0)
+  cd ../dest-rust
 
-  # move docs and cross targets out of the way for splitting
-  mv dest-rust/usr/share/doc dest-doc
-}
-
-package_rust() {
-  depends=('gcc-libs' 'llvm-libs' 'curl' 'libssh2')
-  optdepends=('lldb: rust-lldb script'
-              'gdb: rust-gdb script')
-  provides=('cargo' 'rustfmt')
-  conflicts=('cargo' 'rustfmt')
-  replaces=('cargo' 'rustfmt' 'cargo-tree')
-
-  cd "rustc-$pkgver-src"
-
-  cp -a dest-rust/* "$pkgdir"
-  install -Dm644 -t "$pkgdir/usr/share/licenses/$pkgname" LICENSE*
-
-  # delete unnecesary files, e.g. components and manifest files only used for the uninstall script
-  cd "$pkgdir"/usr/lib/rustlib
-  rm components install.log manifest-* rust-installer-version uninstall.sh
+  # delete unnecessary files, e.g. files only used for the uninstall script
+  rm usr/lib/rustlib/{components,install.log,rust-installer-version,uninstall.sh}
+  rm usr/lib/rustlib/manifest-*
 
   # rustbuild always installs copies of the shared libraries to /usr/lib,
   # overwrite them with symlinks to the per-architecture versions
-  ln -srft "$pkgdir"/usr/lib x86_64-unknown-linux-gnu/lib/*.so
+  ln -srft usr/lib   usr/lib/rustlib/${_rust_target}/lib/*.so
 
-  install -d "$pkgdir"/usr/share/bash-completion/
-  mv "$pkgdir"/etc/bash_completion.d "$pkgdir"/usr/share/bash-completion/completions
+  case "${CARCH}" in
+    x86_64)
+      mkdir -p usr/lib32
+      ln -srft usr/lib32 usr/lib/rustlib/i686-unknown-linux-gnu/lib/*.so
+    ;;
+  esac
+
+  mkdir -p usr/share/bash-completion
+  mv etc/bash_completion.d usr/share/bash-completion/completions
+
+  mkdir -p usr/share/licenses/rust
+  mv -t usr/share/licenses/rust usr/share/doc/rust/{COPYRIGHT,LICENSE*}
+
+  case "${CARCH}" in
+    x86_64)
+      _pick dest-i686 usr/lib/rustlib/i686-unknown-linux-gnu usr/lib32
+      _pick dest-musl usr/lib/rustlib/x86_64-unknown-linux-musl
+    ;;
+  esac
+    
+  _pick dest-wasm usr/lib/rustlib/wasm32-*
+  _pick dest-src  usr/lib/rustlib/src
 }
 
-package_rust-docs() {
-  pkgdesc='Documentation for the Rust programming language'
+package_rust() {
+  optdepends=('lldb: rust-lldb script'
+              'gdb: rust-gdb script')
+  provides=(cargo rustfmt)
+  conflicts=(cargo rustfmt 'rust-docs<1:1.56.1-3')
+  replaces=(cargo rustfmt cargo-tree 'rust-docs<1:1.56.1-3')
 
-  cd "rustc-$pkgver-src"
-  install -Dm644 -t "$pkgdir/usr/share/licenses/$pkgname" LICENSE*
+  cp -a dest-rust/* "$pkgdir"
+}
 
-  install -d "$pkgdir"/usr/share/
-  cp -a dest-doc "$pkgdir"/usr/share/doc
+package_lib32-rust-libs() {
+  pkgdesc="32-bit target and libraries for Rust"
+  depends=(rust lib32-gcc-libs)
+  provides=(lib32-rust)
+  conflicts=(lib32-rust)
+  replaces=(lib32-rust)
+
+  cp -a dest-i686/* "$pkgdir"
+
+  mkdir -p "$pkgdir/usr/share/licenses"
+  ln -s rust "$pkgdir/usr/share/licenses/$pkgname"
+}
+
+package_rust-musl() {
+  pkgdesc="Musl target for Rust"
+  depends=(rust)
+
+  cp -a dest-musl/* "$pkgdir"
+
+  mkdir -p "$pkgdir/usr/share/licenses"
+  ln -s rust "$pkgdir/usr/share/licenses/$pkgname"
+}
+
+package_rust-wasm() {
+  pkgdesc="WebAssembly targets for Rust"
+  depends=(rust lld)
+
+  cp -a dest-wasm/* "$pkgdir"
+
+  mkdir -p "$pkgdir/usr/share/licenses"
+  ln -s rust "$pkgdir/usr/share/licenses/$pkgname"
+}
+
+package_rust-src() {
+  pkgdesc="Source code for the Rust standard library"
+  depends=(rust)
+
+  cp -a dest-src/* "$pkgdir"
+
+  mkdir -p "$pkgdir/usr/share/licenses"
+  ln -s rust "$pkgdir/usr/share/licenses/$pkgname"
 }
 
 # vim:set ts=2 sw=2 et:
-sha256sums=('0ad531a32f3c2e996b9322c6b7262a9cfe557e49ff3363adea07b575106cd770'
-            'SKIP'
-            '7b33955031f9a9c5d63077dedb0f99d77e4e7c996266952c1cec55626dca5dfc'
-            'SKIP'
-            'a2a8a7c6a5732f79cc92f81d3c8380589c4e2b9a996fb565bbefe42f66b62597'
-            '0f8cfbe0387dd62909fe9cb9523223ae1c2319494e2caf5fa4d0592198631b3e'
-            '977da945985dce4484ace8794cbc91241b1f3c27311c1a8b201231db6e1d19e5'
-            'fcf3c4442ba6a9e59415652ce8514428b2e37b80c5fe7d07fb44259ad37abafb')
-sha256sums=('a7c8eeaee85bfcef84c96b02b3171d1e6540d15179ff83dddd9eafba185f85f9'
-            'SKIP'
-            '7b33955031f9a9c5d63077dedb0f99d77e4e7c996266952c1cec55626dca5dfc'
-            'SKIP'
-            'a2a8a7c6a5732f79cc92f81d3c8380589c4e2b9a996fb565bbefe42f66b62597'
-            '0f8cfbe0387dd62909fe9cb9523223ae1c2319494e2caf5fa4d0592198631b3e'
-            '977da945985dce4484ace8794cbc91241b1f3c27311c1a8b201231db6e1d19e5'
-            'fcf3c4442ba6a9e59415652ce8514428b2e37b80c5fe7d07fb44259ad37abafb')
