--- a/x265/PKGBUILD
+++ b/x265/PKGBUILD
@@ -5,67 +5,57 @@
 
 pkgname=x265
 pkgver=3.5
-pkgrel=1
+pkgrel=3
 pkgdesc='Open Source H265/HEVC video encoder'
 arch=(x86_64 powerpc64le powerpc riscv64)
-url=https://bitbucket.org/multicoreware/x265
+url=https://bitbucket.org/multicoreware/x265_git
 license=(GPL)
 depends=(gcc-libs)
 makedepends=(
   cmake
-  git 
+  git
+  ninja
 )
+makedepends_x86_64=(nasm)
 provides=(libx265.so)
 _tag=f0c1022b6be121a753ff02853fbe33da71988656
-source=("x265::git+https://bitbucket.org/multicoreware/x265_git#tag=${_tag}")
-sha256sums=(SKIP)
+source=(git+https://bitbucket.org/multicoreware/x265_git#tag=${_tag})
+sha256sums=('SKIP')
 
-prepare() {
-  cd x265
+pkgver() {
+  cd x265_git
 
-  for d in 8 10 12; do
-    if [[ -d build-$d ]]; then
-      rm -rf build-$d
-    fi
-    mkdir build-$d
-  done
+  git describe --tags
 }
 
 build() {
-  export CFLAGS=${CFLAGS/-mabi=altivec -maltivec/}
-  export CXXFLAGS=${CXXFLAGS/-mabi=altivec -maltivec/}
+  case "${CARCH}" in
+    powerpc)    PLATFORM_FLAGS="-DENABLE_ALTIVEC=ON" ;;
+    powerpc64e) PLATFORM_FLAGS="-DENABLE_ALTIVEC=ON -DENABLE_PIC=ON" ;;
+    *)          PLATFORM_FLAGS="" ;;
+  esac
 
-  cd x265/build-12
 
-  cmake ../source \
+  cmake -S x265_git/source -B build-12 -G Ninja \
     -DCMAKE_INSTALL_PREFIX=/usr \
     -DHIGH_BIT_DEPTH=TRUE \
     -DMAIN12=TRUE \
     -DEXPORT_C_API=FALSE \
     -DENABLE_CLI=FALSE \
     -DENABLE_SHARED=FALSE \
-    -DENABLE_ALTIVEC='OFF' \
-    -DENABLE_PIC='ON'
-  make
+    -Wno-dev ${PLATFORM_FLAGS}
+  ninja -C build-12
 
-  cd ../build-10
-
-  cmake ../source \
+  cmake -S x265_git/source -B build-10 -G Ninja \
     -DCMAKE_INSTALL_PREFIX=/usr \
     -DHIGH_BIT_DEPTH=TRUE \
     -DEXPORT_C_API=FALSE \
     -DENABLE_CLI=FALSE \
     -DENABLE_SHARED=FALSE \
-    -DENABLE_ALTIVEC='OFF' \
-    -DENABLE_PIC='ON'
-  make
+    -Wno-dev ${PLATFORM_FLAGS}
+  ninja -C build-10
 
-  cd ../build-8
-
-  ln -s ../build-10/libx265.a libx265_main10.a
-  ln -s ../build-12/libx265.a libx265_main12.a
-
-  cmake ../source \
+  cmake -S x265_git/source -B build -G Ninja \
     -DCMAKE_INSTALL_PREFIX=/usr \
     -DENABLE_SHARED=TRUE \
     -DENABLE_HDR10_PLUS=TRUE \
@@ -73,15 +63,14 @@ build() {
     -DEXTRA_LINK_FLAGS='-L .' \
     -DLINKED_10BIT=TRUE \
     -DLINKED_12BIT=TRUE \
-    -DENABLE_ALTIVEC='OFF' \
-    -DENABLE_PIC='ON'
-  make
+    -Wno-dev ${PLATFORM_FLAGS}
+  ln -s ../build-10/libx265.a build/libx265_main10.a
+  ln -s ../build-12/libx265.a build/libx265_main12.a
+  ninja -C build
 }
 
 package() {
-  cd x265/build-8
-
-  make DESTDIR="${pkgdir}" install
+  DESTDIR="${pkgdir}" ninja -C build install
 }
 
 # vim: ts=2 sw=2 et:
