* update grml-zsh-config to 0.19.2-1

--- a/grml-zsh-config/PKGBUILD
+++ b/grml-zsh-config/PKGBUILD
@@ -2,17 +2,17 @@
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=grml-zsh-config
-pkgver=0.19.0
-pkgrel=2
+pkgver=0.19.2
+pkgrel=1
 pkgdesc="grml's zsh setup"
-arch=('any')
+arch=(any)
 url='https://grml.org/zsh/'
 license=('GPL2')
 provides=('grmlzshrc')
 depends=('zsh' 'coreutils' 'grep' 'sed' 'procps')
 makedepends=('txt2tags')
 source=("https://deb.grml.org/pool/main/g/grml-etc-core/grml-etc-core_${pkgver}.tar.gz")
-sha256sums=('ab604c71e39fa4f690815b8e47f133757064b88a0f6717aaeb3964f49eac97ee')
+sha256sums=('6103a9364eac997a1f3a207dc49929e314b3f855b13dcb5c9989b2af5253eea8')
 
 build() {
 	cd "${srcdir}/grml-etc-core-${pkgver}/doc"
