* update texlive-fontsextra to 2022.62977-1

--- a/texlive-fontsextra/PKGBUILD
+++ b/texlive-fontsextra/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Rémy Oudompheng <remy.archlinux.org>
 
 pkgname=texlive-fontsextra
-pkgver=2021.61408
-_revnr=${pkgver#2021.}
+pkgver=2022.62977
+_revnr=${pkgver#2022.}
 pkgrel=1
 pkgdesc="TeX Live - all sorts of extra fonts"
 license=('GPL')
@@ -12,12 +12,10 @@ depends=('texlive-core')
 groups=('texlive-most')
 url='http://tug.org/texlive/'
 source=("https://sources.archlinux.org/other/texlive/$pkgname-$pkgver-src.zip"
-        "$pkgname.maps"
-        "newtx-1.701.diff")
+        "$pkgname.maps")
 options=('!emptydirs')
-sha256sums=('80ffe1c439292f9aaa0b1fe88423b5ab9c2abf730f6d1cc89283cc22f03ea211'
-            '1fcc22ee72b40765961a90144d5babe6e902e33e57fe653a9dd4b0b19c6ad399'
-            '2a2535aef4902b3b229b012a83274011c707bb8b5a01e7f889e44acef1484feb')
+sha256sums=('059a6b31e89a33aded190ebb2ccc4122bee55a57e8403a918c19fc0735e89405'
+            '65e004cc5530a3f31d4213f56cae6b9318644ec14246e606819dbfda6109ab7f')
 
 build() {
    cd "$srcdir"
@@ -25,9 +23,6 @@ build() {
 	   bsdtar -xf $p
    done
    rm -rf {tlpkg,doc,source} || true
-
-   # Fix lastminute bug in newtx
-   patch -Np1 -i "${srcdir}/newtx-1.701.diff"
 }
 
 package() {
