* update bison to 3.8.2-4

--- a/bison/PKGBUILD
+++ b/bison/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=bison
 pkgver=3.8.2
-pkgrel=3.1
+pkgrel=4
 pkgdesc="The GNU general-purpose parser generator"
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL3')
@@ -20,6 +20,7 @@ validpgpkeys=('7DF84374B1EE1F9764BBE25D0DDCAA3278D5264E')  # Akim Demaille
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
 
+  CFLAGS+=' -ffat-lto-objects' \
   ./configure --prefix=/usr --datadir=/usr/share
   make
 }
