* update netsurf-buildsystem to 1.9-2

--- a/netsurf-buildsystem/PKGBUILD
+++ b/netsurf-buildsystem/PKGBUILD
@@ -1,8 +1,9 @@
+# POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Alexander F. Rødseth <xyproto@archlinux.org>
 
 pkgname=netsurf-buildsystem
 pkgver=1.9
-pkgrel=1
+pkgrel=2
 pkgdesc='The Netsurf buildsystem'
 arch=(any)
 url='https://source.netsurf-browser.org/buildsystem.git'
